# Rust

./: .gitignore  docker-compose.yml
db/: Dockerfile
message_app/: .env  .gitignore  Cargo.toml  Makefile  docker-compose.yml
message_app/data/: roles.sql
message_app/entity/: Cargo.toml
message_app/entity/src/: mod.rs  prelude.rs  roles.rs  user.rs  user_roles.rs  users.rs
message_app/migration/src/: lib.rs  m20241120_023913_create_users_table.rs  m20241128_082308_create_roles_table.rs  m20241129_011604_create_user_role_table.rs
message_app/migrations/: 20241114095633_create_user_table.up.sql
message_app/src/: main.rs
message_app/src/middlewares/: auth_middleware.rs
message_app/src/models/: login_model.rs  mod.rs  register_model.rs  role_model.rs  user_model.rs  userrole_model.rs
message_app/src/routes/: api_routes.rs  greet_route.rs  greet_routes.rs  mod.rs  uauth_routes.rs
message_app/src/routes/handlers/: greet_handler.rs  greet_handlers.rs  mod.rs  role_handlers.rs  uauth_handlers.rs  unauth_handlers.rs  user_handlers.rs  userrole_handlers.rs
message_app/src/routes/middlewares/: auth_middleware.rs
message_app/src/utils/: api_response.rs  constants.rs  jwt.rs
