[package]
name = "message_app"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "entity",
    "migration",
]

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.6"
env_logger = "0.11.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.12.0", features = ["derive"] }
entity = { path = "entity" }
migration = { path = "migration" }
chrono = "0.4.38"
sha256 = "1.5.0"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.23.0"